# react-native-wallet-utils

./: .gitignore  .gitmodules  .npmignore  LICENSE  README.md  index.d.ts  index.js  package.json  react-native-wallet-utils-debug.podspec  react-native-wallet-utils.podspec
android/: build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/java/com/foxwallet/core/: WalletCoreModule.java  WalletCorePackage.java
go/: go.mod  go.sum  spacemesh.go  spacemesh_test.go  utils.go
ios/: RustCore.h  WalletCore-Bridging-Header.h  WalletCore.h  WalletCore.m  WalletCore.swift
ios/Frameworks/GoCore.xcframework/: Info.plist
ios/Frameworks/GoCore.xcframework/ios-arm64/GoCore.framework/Headers/: GoCore.h
ios/Frameworks/GoCore.xcframework/ios-arm64/GoCore.framework/Modules/: module.modulemap
ios/Frameworks/GoCore.xcframework/ios-arm64/GoCore.framework/Versions/A/Headers/: Fox.objc.h
ios/Frameworks/GoCore.xcframework/ios-arm64_x86_64-simulator/GoCore.framework/: GoCore
ios/WalletCore.xcodeproj/: project.pbxproj
ios/WalletCore.xcodeproj/xcuserdata/apple.xcuserdatad/xcschemes/: xcschememanagement.plist
ios/WalletCore.xcworkspace/xcuserdata/apple.xcuserdatad/: UserInterfaceState.xcuserstate
rust/: Cargo.toml  report.json
rust/src/: lib.rs  mnemonic.rs
rust/src/aleo/: account.rs  error.rs  mod.rs  transaction.rs  types.rs  utils.rs
rust/src/ironfish/: account.rs  mod.rs  transaction.rs  utils.rs
rust/src/polkadot/: pair.rs
scripts/: downloadFiles.js  fileList.js  go_build.sh  go_init.sh  rust_build.sh  variables.sh
spacemesh-go/: build.gradle
