[package]
name = "core"
version = "0.0.0"
authors = ["foxwallet <dev@foxwallet.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
ffi-support = "0.4"
jni = { version = "0.19", optional = true }
lazy_static = "1.4"
libc = "0.2"
thiserror = "1.0"
ironfish_rust = { path = "../fox-ironfish/ironfish-rust" }
hex = "0.4.3"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0"
subtle = "2.4"
openssl = { version = "0.10", features = ["vendored"] }
scrypt = { version = "0.2", default-features = false }

[dependencies.aleo-rust]
path = "../fox-aleo-rust/rust"

[dependencies.snarkvm-console]
path = "../fox-snarkvm/console"

[dependencies.snarkvm-algorithms]
path = "../fox-snarkvm/algorithms"

[dependencies.snarkvm-fields]
path = "../fox-snarkvm/fields"

[dependencies.snarkvm-circuit-network]
path = "../fox-snarkvm/circuit/network"

[dependencies.snarkvm-ledger-store]
path = "../fox-snarkvm/ledger/store"

[dependencies.snarkvm-ledger-query]
path = "../fox-snarkvm/ledger/query"

[dependencies.snarkvm-ledger-block]
path = "../fox-snarkvm/ledger/block"

[dependencies.snarkvm-synthesizer]
path = "../fox-snarkvm/synthesizer"

[dependencies.snarkvm-utilities]
path = "../fox-snarkvm/utilities"

# [dependencies.snarkvm-fields]
# version = "0.11.2"
[dependencies.snarkvm-parameters]
path = "../fox-snarkvm/parameters"

[dependencies.rand]
version = "0.8"

[dependencies.itertools]
version = "0.11.0"

[dependencies.ahash]
version = "0.8.3"
default-features = false
features = []

[dependencies.indexmap]
version = "2.7.0"

[lib]
name = "core"
crate-type = ["staticlib", "cdylib"]

[features]
default = ["jni"]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
